--- a/templates/contact.html
+++ b/templates/contact.html
@@ -56,8 +56,8 @@
                                         </div>
                                         <div class="pq-icon-box-content">
                                             <h4 class="pq-text-white">E-Mail </h4>
-                                            <p class="pq-text-white mb-0"><a href="https://.com/cdn-cgi/l/email-protection#9feffafefcfaf9eaf3eef0fbfadff8f2fef6f3b1fcf0f2" class="__cf_email__" data-cfemail="">contact@wenaklabs.org</a></p>
-                                            <!-- <p class="pq-text-white mb-0"><a href="https://peacefulqode.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ee87808881dcae9e8b8f8d8b889b829f818a8bc08d8183">[email&#160;protected]</a></p> -->
+                                            <p class="pq-text-white mb-0"><a href="" class="__cf_email__" data-cfemail="">contact@wenaklabs.org</a></p>
+                                            
                                         </div>
                                     </div>
                                     <div class="pq-icon-box pq-style-5">
@@ -67,7 +67,7 @@
                                         <div class="pq-icon-box-content">
                                             <h4 class="pq-text-white">Numero de telephone</h4>
                                             <p class="pq-text-white mb-0"> +235 63 61 44 79</p>
-                                            <!-- <p class="pq-text-white mb-0"> + 235                 </p> -->
+                                           
                                         </div>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
     <!--Map Start-->
     <div class="map p-0">
         <div class="pq-bg-map">
-           <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d317893.19730324426!2d-0.1195537!3d51.5032973!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x487604b900d26973%3A0x4291f3172409ea92!2slastminute.com%20London%20Eye%20Riverside%20Building%2C%20County%20Hall%20London%20SE1%207PB%20United%20Kingdom!3m2!1d51.5032973!2d-0.1195537!5e0!3m2!1sen!2sin!4v1652772883319!5m2!1sen!2sin" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <iframe src="//umap.openstreetmap.fr/fr/map/zone-dimplantation-de-wenaklabs_803478?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <!--Map ENd-->
