--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -27,17 +27,17 @@
                                         <a href="{% url 'apropos' %}">A Propos</a>
                                     </li>
                                     <li class="menu-item {% active_link 'machine' css_class='current-menu-item' %}">
-                                        <a href="{% url 'machine' %}">Nos Machines</a>
+                                        <a href="{% url 'machine' %}">Machines</a>
                                          
                                     </li>
                                     <li class="menu-item {% active_link 'training' css_class='current-menu-item' %}">
-                                        <a href="{% url 'training' %}">Nos Formations</a>
+                                        <a href="{% url 'training' %}">Formations</a>
                                        
                                     </li>
                                    
                                     <li class="menu-item {% active_link 'blog' css_class='current-menu-item' %}">
                                         
-                                        <a href="{% url 'blog' %}">Blogs</a>
+                                        <a href="{% url 'blog' %}">Blog</a>
                                        
                                     </li>
                                     <li class="menu-item {% active_link 'contact' css_class='current-menu-item' %}">
