--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -62,7 +62,7 @@
 
     <!--Jquery js-->
     <script data-cfasync="false"
-        src="https://peacefulqode.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+        src="https://.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="{% static 'assets/js/jquery.min.js' %}"></script>
     <!--Bootstrap js-->
     <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
